# AltIRC

./: .gitmodules  CMakeLists.txt  README.md
AltIRC/plugins/: admin.lua  config.lua  misc.lua
lib/lua/: CMakeLists.txt
src/: AltIrc.cpp  AltIrc.h  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  IrcConnection.cpp  IrcConnection.h  IrcMessage.cpp  IrcMessage.h  Logger.cpp  Logger.h  LuaState.cpp  LuaState.h  ProtocolHandler.cpp  ProtocolHandler.h  main.cpp
src/Network/: IPSocket.cpp  IPSocket.h  NetworkBuffer.cpp  NetworkBuffer.h  Socket.cpp  Socket.h  SocketAddress.cpp  SocketAddress.h  TcpSocket.cpp  TcpSocket.h
src/Plugin/: Bind.h  Bind.pkg  CallbackHandler.cpp  CallbackHandler.h  Commands.lua  PluginManager.cpp  PluginManager.h  ToluaTest.cpp  ToluaTest.h
